--- a/src/pages/AddMenuItem/style.css
+++ b/src/pages/AddMenuItem/style.css
@@ -5,6 +5,8 @@
 .addMenuItem__title {
   font-weight: 500;
   font-size: 18px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .addMenuItem__inputContainer {
@@ -18,6 +20,8 @@
 
 .addMenuItem__inputLabel {
   flex: 0.2;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .addMenuItem__inputBody {
