Allow uploading photo for menu item

--- a/src/pages/AddMenuItem/style.css
+++ b/src/pages/AddMenuItem/style.css
@@ -27,3 +27,13 @@
 .addMenuItem__inputBody {
   flex: 0.8;
 }
+
+.addMenuItem__img {
+  width: 350px;
+  height: 210px;
+  margin-top: 50px;
+}
+
+.addMenuItem__saveButton {
+  margin-top: 50px;
+}
